--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <title>Color Grid</title>
+    <title>Changing Color Project</title>
     <link rel="stylesheet" href="main.css" charset="utf-8">
   </head>
   <body>
